--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node .",
     "predev": "npm run clean",
-    "dev": "nodemon ."
+    "dev": "cross-env mode=development nodemon ."
   },
   "author": "Abhay Sehgal",
   "engines": {
@@ -27,6 +27,7 @@
     "@types/express": "^4.16.1",
     "@types/mongodb": "^3.5.32",
     "@types/node": "^10.12.18",
+    "cross-env": "^7.0.2",
     "nodemon": "^1.18.9",
     "rimraf": "^2.6.3",
     "ts-node": "^7.0.1",
